Update package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sietse85/nova-button",
+    "name": "landsearch/nova-button",
     "description": "(Nova 4+) A Laravel Nova package for adding buttons to your resources.",
     "authors": [
         {
